# final-project-level3-nlp-13

./: .gitignore  License.md  README.md  base_config.json  pyproject.toml  train.py
application/: README.md
application/app/: __main__.py  main.py
application/app/core/: config.py
application/app/models/: custom_model.py  model.py
application/app/routers/: chat.py  sample.py
application/files/: abuse_voca.json  sample_final.csv  sample_log.csv
application/templates/: chat.html  sample.html
crawling/: get_live_data.ipynb  requirements.txt
crawling_data/1209/: "반려견과_동행"_이지풉백_배변봉투&로즈힙_관절영양제.csv  10%_할인_쿠폰_발행_신상_할인_라이브.csv  14k_탄생석_목걸이&반지_크리스마스_선물_특가전_.csv  CJ고메_베이커리(생지)_출시_특가_LIVE.csv  [비너스]겨울_필수템_스타킹_라이브특가!_.csv  [쟈딕앤볼테르]_겨울_아우터_특가&최대_78%_SALE.csv  ♥테라건_역대급_할인_LIVE♥.csv  국내산_당일바리_영덕_대사이즈_반건조오징어.csv  내가_끓인_어묵탕⭐_추운_겨울에_뜨끈하게~❤️.csv  늑대와양_양꼬치_초간편_밀키트_전자레인지_4분_완성!.csv  맛있는_젤라또_아이스크림_[젤요]_건강한_국내산_농산물.csv  장기영과_전북바이오융합이_쏜다_in수원메가쇼.csv  ［직구홈즈］이찌방깡_FW_의류,가방_특가_대전!_.csv  🔥방역_소독기_초특가🔥_로이만_연무기_35%_할인!.csv
data/: dataset.py  preprocessing.py
logger/: mylogger.py
modeling/: README.md  base_config.json  example_config.json  train.py
modeling/data/: dataset.py  preprocessing.py  stop_words.txt
modeling/logger/: mylogger.py
modeling/models/: custom.py  utill.py
modeling/train_utills/: test.py  trainer_setting.py
modeling/utills/: utill.py
models/: utill.py
notebook/: curriculum.ipynb
train_utills/: test.py  trainer_setting.py
utills/: utill.py
wandb/: latest-run
wandb/run-20211127_070712-g49a93j1/: run-g49a93j1.wandb
(+114 files in other folders)
